// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders with PaaS Serverless hidden 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f5f5f5",
        "borderBottomColor": "#cccccc",
        "borderBottomWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 18,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Azure Portal Extensions Dashboard
    </Text>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f5f5f5",
        "borderBottomColor": "#cccccc",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 44,
        "padding": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minWidth": 120,
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 14,
          }
        }
      />
      <MockIonicons
        color="#000000"
        name="chevron-down"
        size={16}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 14,
            }
          }
        >
          websites
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Header renders with default state 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f5f5f5",
        "borderBottomColor": "#cccccc",
        "borderBottomWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 18,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Azure Portal Extensions Dashboard
    </Text>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f5f5f5",
        "borderBottomColor": "#cccccc",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 44,
        "padding": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minWidth": 120,
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 14,
          }
        }
      />
      <MockIonicons
        color="#000000"
        name="chevron-down"
        size={16}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 14,
            }
          }
        >
          paasserverless
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 14,
            }
          }
        >
          websites
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Header renders with different environment 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f5f5f5",
        "borderBottomColor": "#cccccc",
        "borderBottomWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 18,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Azure Portal Extensions Dashboard
    </Text>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f5f5f5",
        "borderBottomColor": "#cccccc",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 44,
        "padding": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minWidth": 120,
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 14,
          }
        }
      />
      <MockIonicons
        color="#000000"
        name="chevron-down"
        size={16}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 14,
            }
          }
        >
          paasserverless
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 14,
            }
          }
        >
          websites
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Header renders with environment dropdown visible 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f5f5f5",
        "borderBottomColor": "#cccccc",
        "borderBottomWidth": 1,
        "justifyContent": "center",
        "minHeight": 44,
        "padding": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 18,
          "fontWeight": "600",
          "textAlign": "center",
        }
      }
    >
      Azure Portal Extensions Dashboard
    </Text>
  </View>,
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#f5f5f5",
        "borderBottomColor": "#cccccc",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 44,
        "padding": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#e0e0e0",
          "borderRadius": 4,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "minWidth": 120,
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 14,
          }
        }
      />
      <MockIonicons
        color="#000000"
        name="chevron-down"
        size={16}
      />
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "padding": 16,
          }
        }
      >
        <Text
          style={
            {
              "color": undefined,
              "fontSize": 14,
            }
          }
        >
          websites
        </Text>
      </View>
    </View>
  </View>,
  <View
    style={
      {
        "backgroundColor": "#f5f5f5",
        "borderColor": "#cccccc",
        "borderRadius": 4,
        "borderWidth": 1,
        "elevation": 5,
        "left": 10,
        "maxHeight": 200,
        "minHeight": 50,
        "position": "absolute",
        "right": 10,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
        "top": 50,
        "zIndex": 1000,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#f5f5f5",
          "borderBottomColor": undefined,
          "borderBottomWidth": 1,
          "opacity": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
          }
        }
      >
        Public Cloud
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#f5f5f5",
          "borderBottomColor": undefined,
          "borderBottomWidth": 1,
          "opacity": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
          }
        }
      >
        Fairfax
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#f5f5f5",
          "borderBottomColor": undefined,
          "borderBottomWidth": 0,
          "opacity": 1,
          "padding": 14,
        }
      }
    >
      <Text
        style={
          {
            "color": "#000000",
            "fontSize": 16,
          }
        }
      >
        Mooncake
      </Text>
    </View>
  </View>,
]
`;
